--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.data:spring-data-mongodb:3.1.5'
+	compile 'org.mongodb:mongodb-driver-sync:4.2.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.0'
+	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
